kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  home
  namespace: default
  labels:
    app:  home
spec:
  selector:
    matchLabels:
      app: home
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  home
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  home
        image:  syukurilexs/home:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        imagePullPolicy: Always
        ports:
        - containerPort: 8080 
          name:  home
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kuala_Lumpur
      restartPolicy: Always
