kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: default
spec:
  selector:
    app: home
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: home
    protocol: TCP
    port: 8080 
    targetPort: 8080
