kubernetes/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home 
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: home.elektrik2u.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home 
            port:
              number: 8080
